# IconRandomizerAPI

./: CMakeLists.txt  README.md  about.md  changelog.md  mod.json
include/: IconRandomizer.hpp
src/: IconRandomizer.cpp  main.cpp
